docker,linux等知识